<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_35"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profil_35"
        android:title="@string/menu_profil"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/panduan"
        android:icon="@drawable/ic_panduan_35"
        android:title="@string/menu_panduan"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout_35"
        android:title="@string/menu_logout"
        app:showAsAction="ifRoom"/>
</menu>