<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail_antrian">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/gradient11"
            android:padding="20dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/detail_antrian"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                android:layout_margin="20dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/no_antrian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/nomor_antrian_pending"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/blue_theme2"
                            android:textSize="50sp"/>

                        <TextView
                            android:id="@+id/antrian_pending_note"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:text="@string/antrian_pending_note"
                            android:layout_marginBottom="20dp"/>

                        <TextView
                            android:id="@+id/label_status"
                            android:labelFor="@id/tanggal_berobat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_status"
                            android:textColor="@color/dark_grey"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-medium"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:hint="@string/status_antrian"
                            android:textSize="17sp"
                            android:fontFamily="sans-serif-light"/>

                        <TextView
                            android:id="@+id/label_tanggal"
                            android:labelFor="@id/tanggal_berobat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_tanggal"
                            android:textColor="@color/dark_grey"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-medium"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tanggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp"
                            android:hint="@string/tanggal_berobat"
                            android:textSize="17sp"
                            android:fontFamily="sans-serif-light"/>

                        <TextView
                            android:id="@+id/label_nim"
                            android:labelFor="@id/nim"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_nim"
                            android:textColor="@color/dark_grey"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-medium"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/nim"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/nim"
                            android:textSize="17sp"
                            android:fontFamily="sans-serif-light"/>

                        <TextView
                            android:id="@+id/label_nama"
                            android:labelFor="@id/nama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_nama"
                            android:textColor="@color/dark_grey"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-medium"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/nama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp"
                            android:text="@string/nama"
                            android:textSize="17sp"
                            android:fontFamily="sans-serif-light"/>

                        <TextView
                            android:id="@+id/label_dokter"
                            android:labelFor="@id/dokter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_namadokter"
                            android:textColor="@color/dark_grey"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-medium"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/nama_dokter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/nama_dokter"
                            android:textSize="17sp"
                            android:fontFamily="sans-serif-light"/>

                        <TextView
                            android:id="@+id/label_poli"
                            android:labelFor="@id/poli"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_poli"
                            android:textColor="@color/dark_grey"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-medium"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/poli"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/nama_poli"
                            android:textSize="17sp"
                            android:fontFamily="sans-serif-light"/>

                        <TextView
                            android:id="@+id/label_jadwal"
                            android:labelFor="@id/jadwal_praktik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_jadwalpraktik"
                            android:textColor="@color/dark_grey"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-medium"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/jadwal_praktik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp"
                            android:text="@string/jadwal"
                            android:textSize="17sp"
                            android:fontFamily="sans-serif-light"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:justificationMode="inter_word"
                            android:text="@string/antrian_greeting"/>

                    </LinearLayout>

                </ScrollView>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/backgroud_loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:animateLayoutChanges="true"/>

    <RelativeLayout
        android:id="@+id/progress_loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_below="@id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:text="@string/wait"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>