<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient3"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"

            android:text="@string/greeting1"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="50sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="50dp"

            android:text="@string/greeting2"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nim"
            android:layout_width="match_parent"
            android:layout_height="68dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/input_nimemail"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/input_password"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_landing_button"

            android:text="@string/login"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/blue_theme3"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/belum_punya"
            android:textSize="12sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_login_button"
            android:layout_marginTop="10dp"

            android:text="@string/register"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/light_grey"
            android:textSize="15sp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/backgroud_loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient3"
        android:animateLayoutChanges="true"/>

    <RelativeLayout
        android:id="@+id/progress_loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_below="@id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:text="@string/wait"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:textColor="@color/white"
            android:text="@string/app_version"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>