<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/gradient1">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logoputih"
            android:layout_centerInParent="true"
            android:contentDescription="@string/logo_name"/>

        <TextView
            android:layout_above="@id/grouplogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/poweredby"
            android:fontFamily="sans-serif-light"/>

        <ImageView
            android:id="@+id/grouplogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:src="@drawable/nagagroups"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/app_name"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>